// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container view Renders a spinner if data is loading 1`] = `<Spinner />`;

exports[`Container view Renders a table view without data 1`] = `
<Fragment>
  <WithStyles(ForwardRef(Table))
    role="table"
  >
    <WithStyles(ForwardRef(TableHead))>
      <WithStyles(ForwardRef(TableRow))
        key="headerGroup_0"
        role="row"
      >
        <WithStyles(ForwardRef(TableCell))
          colSpan={1}
          key="header_name"
          onClick={[Function]}
          role="columnheader"
          style={
            Object {
              "cursor": "pointer",
            }
          }
          title="Toggle SortBy"
        >
          File
          <SortedTableCarat
            sorted={false}
          />
        </WithStyles(ForwardRef(TableCell))>
        <WithStyles(ForwardRef(TableCell))
          colSpan={1}
          key="header_types[0]"
          onClick={[Function]}
          role="columnheader"
          style={
            Object {
              "cursor": "pointer",
            }
          }
          title="Toggle SortBy"
        >
          Type
          <SortedTableCarat
            sorted={false}
          />
        </WithStyles(ForwardRef(TableCell))>
      </WithStyles(ForwardRef(TableRow))>
    </WithStyles(ForwardRef(TableHead))>
    <WithStyles(ForwardRef(TableBody))
      role="rowgroup"
    >
      <WithStyles(ForwardRef(TableRow))
        key="no-resources-found"
      >
        <WithStyles(ForwardRef(TableCell))
          rowSpan={3}
        >
          No resources were found within this container.
        </WithStyles(ForwardRef(TableCell))>
      </WithStyles(ForwardRef(TableRow))>
    </WithStyles(ForwardRef(TableBody))>
  </WithStyles(ForwardRef(Table))>
  <DetailsContextMenu />
</Fragment>
`;

exports[`Container view Renders a table with data 1`] = `
<Fragment>
  <WithStyles(ForwardRef(Table))
    role="table"
  >
    <WithStyles(ForwardRef(TableHead))>
      <WithStyles(ForwardRef(TableRow))
        key="headerGroup_0"
        role="row"
      >
        <WithStyles(ForwardRef(TableCell))
          colSpan={1}
          key="header_name"
          onClick={[Function]}
          role="columnheader"
          style={
            Object {
              "cursor": "pointer",
            }
          }
          title="Toggle SortBy"
        >
          File
          <SortedTableCarat
            sorted={false}
          />
        </WithStyles(ForwardRef(TableCell))>
        <WithStyles(ForwardRef(TableCell))
          colSpan={1}
          key="header_types[0]"
          onClick={[Function]}
          role="columnheader"
          style={
            Object {
              "cursor": "pointer",
            }
          }
          title="Toggle SortBy"
        >
          Type
          <SortedTableCarat
            sorted={false}
          />
        </WithStyles(ForwardRef(TableCell))>
      </WithStyles(ForwardRef(TableRow))>
    </WithStyles(ForwardRef(TableHead))>
    <WithStyles(ForwardRef(TableBody))
      role="rowgroup"
    >
      <ContainerTableRow
        key="https://myaccount.mypodserver.com/inbox"
        resource={
          Object {
            "iri": "https://myaccount.mypodserver.com/inbox",
            "name": "/inbox",
          }
        }
      />
      <ContainerTableRow
        key="https://myaccount.mypodserver.com/private"
        resource={
          Object {
            "iri": "https://myaccount.mypodserver.com/private",
            "name": "/private",
          }
        }
      />
      <ContainerTableRow
        key="https://myaccount.mypodserver.com/note.txt"
        resource={
          Object {
            "iri": "https://myaccount.mypodserver.com/note.txt",
            "name": "/note.txt",
          }
        }
      />
    </WithStyles(ForwardRef(TableBody))>
  </WithStyles(ForwardRef(Table))>
  <DetailsContextMenu />
</Fragment>
`;
